Closed Bug 291919 Opened 21 years ago Closed 21 years ago

syntax error nsRootAccessible.cpp:585 when compiling with --disable-xul

Categories

(Core :: Disability Access APIs, defect)

1.7 Branch
x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ignacio.holgado, Assigned: aaronlev)

Details

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.7) Gecko/20050414 Firefox/1.0.3 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.7) Gecko/20050414 Firefox/1.0.3 While compiling mozilla with the --disable-xul parameter the compilation crashes. The problem is in the file:line nsRootAccessible.cpp:585 . The problem is that a 'if' inside a #ifdef block and a else is out of this block . A solution can be to add the following lines: // by ihm #else if(0) {} #endif Reproducible: Always Steps to Reproduce: Compile with the --disable-xul parameter Actual Results: The report of the error compiling is: nsRootAccessible.cpp:334: warning: unused variable `PRBool fireFocus' nsRootAccessible.cpp: In method `nsresult nsRootAccessible::HandleEvent(nsIDOMEvent *)': nsRootAccessible.cpp:585: parse error before `else' nsRootAccessible.cpp:589: `containerAccessible' undeclared (first use this function) nsRootAccessible.cpp:589: (Each undeclared identifier is reported only once nsRootAccessible.cpp:589: for each function it appears in.) nsRootAccessible.cpp:602: warning: control reaches end of non-void function `nsRootAccessible::HandleEvent(nsIDOMEvent *)'
Assignee: general → aaronleventhal
Component: General → Disability Access APIs
Product: Mozilla Application Suite → Core
QA Contact: general → accessibility-apis
Version: unspecified → Trunk
Version: Trunk → 1.7 Branch
i checked in a change, in the future, please attach cvs diffs, they help people figure out which versions of files you're using.
Should this be marked RESOLVED FIXED then?
i dunno, is it fixed? i'm not really planning on testing it. reporter: if this is fixed, please resolve it as such.
Reporter, reopen if there is still a problem.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.