Bug 291919 syntax error nsRootAccessible.cpp:585 when compiling with --disable-xul